--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ filelock==3.16.1
 Flask==3.0.3
 fsspec==2024.10.0
 ghp-import==2.1.0
+gunicorn==23.0.0
 huggingface-hub==0.26.2
 idna==3.10
 importlib_metadata==8.5.0
