--- a/.github/workflows/publish-to-github-pages.yml
+++ b/.github/workflows/publish-to-github-pages.yml
@@ -26,10 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Step 4: Build and deploy the app
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./  # Publish the entire repository or specify the build output folder
-        cname: ""  # Optional: Set a custom domain here if needed
+    # Step 4: Run the Dash app
+    - name: Run Dash Application
+      run: |
+        python app.py
