--- a/.github/workflows/publish-to-github-pages.yml
+++ b/.github/workflows/publish-to-github-pages.yml
@@ -26,7 +26,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # Step 4: Run the Dash app
-    - name: Run Dash Application
+    # Step 4: Start Dash App with Gunicorn
+    - name: Start Gunicorn Server
       run: |
-        python app.py
+        gunicorn --bind 0.0.0.0:8050 app:server &
+      continue-on-error: true
+
+    # Step 5: Test if the app is running (optional)
+    - name: Verify App is Running
+      run: |
+        curl --fail http://localhost:8050 || echo "Failed to start app"
