--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       # Step 2: Log in to GitHub Packages
-      - name: Log in to GitHub Packages
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
