Docker image name change

--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -32,9 +32,9 @@ jobs:
       # Step 3: Build the Docker image
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/dash-app:latest .
+          docker build -t ghcr.io/${{ github.repository_owner }}/athena-dash-app:latest .
 
       # Step 4: Push Docker image to GitHub Packages
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/dash-app:latest
+          docker push ghcr.io/${{ github.repository_owner }}/athena-dash-app:latest
