--- a/.github/workflows/publish-material-docs.yml
+++ b/.github/workflows/publish-material-docs.yml
@@ -43,4 +43,4 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material 
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --force --remote-branch gh-pages
