--- a/.gitignore
+++ b/.gitignore
@@ -161,10 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-/components
-/callbacks
-/pages
 /data/job_applications_org
-/data_backup_
-
-try_here.py
+try_me.py
