--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ theme:
       primary: teal
       accent: cyan
 
-    # Light Mode
+    # Light Mode (Default)
     - scheme: default
       toggle:
         icon: material/brightness-4
