--- a/.github/workflows/publish-material-docs.yml
+++ b/.github/workflows/publish-material-docs.yml
@@ -39,37 +39,44 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      # Step 3: Setup Python
+      # Step 3: Fetch Latest gh-pages Branch
+      - name: Fetch gh-pages
+        run: |
+          git fetch origin gh-pages:gh-pages || true
+          git checkout gh-pages || git checkout --orphan gh-pages
+
+      # Step 4: Setup Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
 
-      # Step 4: Setup Cache
+      # Step 5: Setup Cache
       - name: Setup Cache for MkDocs Dependencies
         uses: actions/cache@v4
         with:
-          key: mkdocs-material-${{ hashFiles('**/requirements.txt') }}
+          key: mkdocs-material-${{ hashFiles('**/requirements_docs.txt') }}
           path: ~/.cache/pip
           restore-keys: |
             mkdocs-material-
 
-      # Step 5: Install Dependencies
+      # Step 6: Install Dependencies
       - name: Install MkDocs Material and Plugins
         run: pip install -r requirements_docs.txt
 
-      # Step 6: Validate Build
+      # Step 7: Validate Build
       - name: Test MkDocs Build
         run: mkdocs build
 
-      # Step 7: Upload Build Artifacts
+      # Step 8: Upload Build Artifacts
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: mkdocs-site
           path: site/
 
-      # Step 8: Deploy to GitHub Pages
+      # Step 9: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        run: mkdocs gh-deploy --remote-branch gh-pages
+        run: |
+          mkdocs gh-deploy --remote-branch gh-pages --force
