--- a/.github/workflows/build-and-deploy-material-docs.yml
+++ b/.github/workflows/build-and-deploy-material-docs.yml
@@ -7,7 +7,9 @@ on:
     paths:
       - 'docs/**'
       - 'mkdocs.yml'
-
+  
+  workflow_dispatch: 
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
