Find mkdocs.yml

--- a/.github/workflows/build-and-deploy-material-docs.yml
+++ b/.github/workflows/build-and-deploy-material-docs.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Debug Repository Contents
+        run: ls -R 
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
