--- a/.github/workflows/publish-material-docs.yml
+++ b/.github/workflows/publish-material-docs.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-
   workflow_dispatch:
 
 permissions:
@@ -13,8 +12,8 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-deploy:
-    name: Build & Deploy
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
       # Step 1: Checkout the repository
@@ -27,29 +26,49 @@ jobs:
         with:
           python-version: 3.x
 
-      # Step 3: Set cache ID
-      - name: Set Cache ID
-        run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-
-      # Step 4: Cache pip dependencies
-      - name: Cache pip dependencies
+      # Step 3: Cache pip dependencies
+      - name: Cache pip
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: pip-cache-${{ env.cache_id }}
+          key: pip-cache-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            pip-cache-
+            pip-cache-${{ runner.os }}
 
-      # Step 5: Install MkDocs 
+      # Step 4: Install MkDocs and dependencies
       - name: Install MkDocs
         run: |
           pip install mkdocs-material
 
-      # Step 6: Build the MkDocs site
+      # Step 5: Build the MkDocs site
       - name: Build MkDocs
         run: mkdocs build --clean
 
-      # Step 7: Deploy to GitHub Pages (Manual Deployment)
+      # Step 6: Verify build size and remove unsupported files
+      - name: Verify and Clean Site
+        run: |
+          du -sh site/   # Log total size
+          find site/ -type l -exec rm {} +  # Remove any symlinks
+
+      # Step 7: Upload build artifacts
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: ./site
+
+  # Deploy job
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # Step 1: Download build artifact
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: github-pages
+
+      # Step 2: Deploy to GitHub Pages
       - name: Deploy to gh-pages
         run: |
           git config user.name "github-actions[bot]"
