--- a/.github/workflows/publish-material-docs.yml
+++ b/.github/workflows/publish-material-docs.yml
@@ -1,4 +1,5 @@
-name: Publish Material MKDocs
+name: Deploy MkDocs to GitHub Pages
+
 on:
   push:
     branches:
@@ -6,34 +7,25 @@ on:
 
 permissions:
   contents: write
-
+  
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-
-      # Fixing cache path to pip's default cache directory
       - uses: actions/cache@v4
         with:
-          key: pip-cache-${{ runner.os }}-${{ env.cache_id }}
-          path: ~/.cache/pip
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
           restore-keys: |
-            pip-cache-${{ runner.os }}
-
-      # Install MkDocs Material
+            mkdocs-material-
       - run: pip install mkdocs-material 
-
-      # Deploy MkDocs to GitHub Pages
       - run: mkdocs gh-deploy --force
