--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "athena-recruitment-analytics"
 version = "0.1.0"
 description = "Application Tracking \\& Recruitment Analytics Dashboard"
-authors = ["Fox Techniques <info@fox-techniques.com>"]
+authors = ["FOX Techniques <info+athena@fox-techniques.com>"]
 license = "MIT"
 readme = "README.md"
 
