--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,73 @@
-babel==2.16.0 ; python_version >= "3.10" and python_version < "4.0"
-blinker==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2024.8.30 ; python_version >= "3.10" and python_version < "4.0"
-charset-normalizer==3.4.0 ; python_version >= "3.10" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0"
-dash-bootstrap-components==1.6.0 ; python_version >= "3.10" and python_version < "4"
-dash-core-components==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-dash-html-components==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-dash-table==5.0.0 ; python_version >= "3.10" and python_version < "4.0"
-dash==2.18.2 ; python_version >= "3.10" and python_version < "4.0"
-flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
-ghp-import==2.1.0 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
-importlib-metadata==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
-irene-sankey==1.1.1 ; python_version >= "3.10" and python_version < "4.0"
-itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
-jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
-markdown==3.7 ; python_version >= "3.10" and python_version < "4.0"
-markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
-mergedeep==1.3.4 ; python_version >= "3.10" and python_version < "4.0"
-mkdocs-get-deps==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
-mkdocs-material-extensions==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-mkdocs-material==9.5.46 ; python_version >= "3.10" and python_version < "4.0"
-mkdocs==1.6.1 ; python_version >= "3.10" and python_version < "4.0"
-nest-asyncio==1.6.0 ; python_version >= "3.10" and python_version < "4.0"
-numpy==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
-packaging==24.2 ; python_version >= "3.10" and python_version < "4.0"
-paginate==0.5.7 ; python_version >= "3.10" and python_version < "4.0"
-pandas==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
-pathspec==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
-platformdirs==4.3.6 ; python_version >= "3.10" and python_version < "4.0"
-plotly==5.24.1 ; python_version >= "3.10" and python_version < "4.0"
-pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
-pymdown-extensions==10.12 ; python_version >= "3.10" and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
-pytz==2024.2 ; python_version >= "3.10" and python_version < "4.0"
-pyyaml-env-tag==0.1 ; python_version >= "3.10" and python_version < "4.0"
-pyyaml==6.0.2 ; python_version >= "3.10" and python_version < "4.0"
-regex==2024.11.6 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
-retrying==1.3.4 ; python_version >= "3.10" and python_version < "4.0"
-setuptools==75.6.0 ; python_version >= "3.10" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-tenacity==9.0.0 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
-tzdata==2024.2 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.2.3 ; python_version >= "3.10" and python_version < "4.0"
-watchdog==6.0.0 ; python_version >= "3.10" and python_version < "4.0"
-werkzeug==3.0.6 ; python_version >= "3.10" and python_version < "4.0"
-zipp==3.21.0 ; python_version >= "3.10" and python_version < "4.0"
+asttokens==3.0.0
+babel==2.16.0
+blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.8.9
+decorator==5.1.1
+executing==2.1.0
+Flask==3.0.3
+ghp-import==2.1.0
+idna==3.10
+importlib_metadata==8.5.0
+ipykernel==6.29.5
+ipython==8.30.0
+irene-sankey==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+Markdown==3.7
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.46
+mkdocs-material-extensions==1.3.1
+nest-asyncio==1.6.0
+numpy==2.1.3
+packaging==24.2
+paginate==0.5.7
+pandas==2.2.3
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+platformdirs==4.3.6
+plotly==5.24.1
+prompt_toolkit==3.0.48
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.18.0
+pymdown-extensions==10.12
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
+pyzmq==26.2.0
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+setuptools==75.6.0
+six==1.16.0
+stack-data==0.6.3
+tenacity==9.0.0
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==6.0.0
+wcwidth==0.2.13
+Werkzeug==3.0.6
+zipp==3.21.0
