Update Discord link in SUPPORT.md and mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/fox-techniques/athena-recruitment-analytics
     - icon: fontawesome/brands/discord
-      link: https://discord.gg/5BbqZNPC
+      link: https://discord.gg/EUFjNyzhVJ
     - icon: fontawesome/brands/x-twitter
       link: https://x.com/foxtechniques/
     - icon: fontawesome/brands/linkedin
