Enhance documentation and configuration setup for ATHENA dashboard
- Updated .env.example with Dash configuration details.
- Added configuration guide in configuration.md for environment variables.
- Revised demo.md to improve clarity and engagement.
- Streamlined instructions.md for better user experience.
- Introduced prerequisites.md to outline necessary dependencies.
- Updated mkdocs.yml to include new documentation sections.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-# .env
+# ========================
+# 🔭 Dash Configuration
+# ========================
 DASH_HOST=<dash_host> 
 DASH_PORT=8050  
 DASH_DEBUG=True
